option java_package = "com.tny.game.protobuf";

import "tny/protobuf/PBCommon.proto";

message CapacitySupplierProto {
    optional int64 id = 1;
    optional int32 itemID = 2;
    optional int32 type = 3;
    optional bool combo = 4;
    optional int64 expireAt = 5;
    repeated IntEntryProto capacityMap = 6;
    repeated int64 suppliers = 7;
    repeated int32 group = 8;
}

message CapacityGoalProto {
    optional int64 id = 1;
    optional int32 itemID = 2;
    optional int64 expireAt = 3;
    repeated int64 suppliers = 4;
    repeated int32 group = 8;
}

message CapacityStoreProto {
    optional int64 playerID = 1;
    repeated CapacitySupplierProto suppliers = 2;
    repeated CapacityGoalProto goals = 3;
}
